--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -128,6 +128,7 @@ on:
           - vplus
           - xiaobao
           - zysj
+          - xgp
       armbian_kernel:
         description: "Select kernel version."
         required: false
@@ -181,12 +182,12 @@ on:
       builder_name:
         description: "Set Armbian builder signature."
         required: false
-        default: "ophub"
+        default: "momokind"
         type: choice
         options:
           - ophub
           - angel
-          - yourname
+          - momokind
 
 env:
   TZ: America/New_York
