--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -134,7 +134,7 @@ on:
           - vplus
           - xiaobao
           - zysj
-          - xgp
+          - xgp-v3
       armbian_kernel:
         description: "Select kernel version."
         required: false
