Update rebuild-armbian.yml change to xgp-v3

--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -128,7 +128,7 @@ on:
           - vplus
           - xiaobao
           - zysj
-          - xgp
+          - xgp-v3
       armbian_kernel:
         description: "Select kernel version."
         required: false
