--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -135,6 +135,7 @@ on:
           - xiaobao
           - zysj
           - xgp-v3
+          - jianpian-tv
       armbian_kernel:
         description: "Select kernel version."
         required: false
