--- a/.github/workflows/build-armbian.yml
+++ b/.github/workflows/build-armbian.yml
@@ -46,6 +46,7 @@ on:
           - h66k
           - h68k
           - h69k
+          - z96a
           - h88k
           - h88k-v3
           - hugsun-x99
@@ -176,6 +177,7 @@ on:
         type: choice
         options:
           - ophub/kernel
+          - momokind/ophub-kernel
       kernel_usage:
         description: "Set the tags of the stable kernel."
         required: false
@@ -210,7 +212,7 @@ on:
         options:
           - ophub
           - angel
-          - yourname
+          - momokind
 
 env:
   TZ: America/New_York
@@ -285,7 +287,7 @@ jobs:
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Rebuild Armbian
-        uses: ophub/amlogic-s9xxx-armbian@main
+        uses: momokind/amlogic-s9xxx-armbian@z96a
         if: ${{ steps.clean.outputs.status }} == 'success' && !cancelled()
         with:
           build_target: armbian
