--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -40,6 +40,7 @@ on:
           - h66k
           - h68k
           - h69k
+          - z96a
           - h88k
           - h88k-v3
           - hugsun-x99
@@ -170,6 +171,7 @@ on:
         type: choice
         options:
           - ophub/kernel
+          - momokind/ophub-kernel
       kernel_usage:
         description: "Set the tags of the stable kernel."
         required: false
@@ -204,7 +206,7 @@ on:
         options:
           - ophub
           - angel
-          - yourname
+          - momokind
 
 env:
   TZ: America/New_York
@@ -265,7 +267,7 @@ jobs:
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Rebuild Armbian
-        uses: ophub/amlogic-s9xxx-armbian@main
+        uses: momokind/amlogic-s9xxx-armbian@z96a
         if: ${{ env.ARMBIAN_URL }} != '' && !cancelled()
         with:
           build_target: armbian
