--- a/.github/workflows/use-releases-file-to-build.yml
+++ b/.github/workflows/use-releases-file-to-build.yml
@@ -46,6 +46,7 @@ on:
           - h66k
           - h68k
           - h69k
+          - z96a
           - h88k
           - h88k-v3
           - hugsun-x99
@@ -176,6 +177,7 @@ on:
         type: choice
         options:
           - ophub/kernel
+          - momokind/ophub-kernel
       kernel_usage:
         description: "Set the tags of the stable kernel."
         required: false
@@ -210,7 +212,7 @@ on:
         options:
           - ophub
           - angel
-          - yourname
+          - momokind
 
 env:
   TZ: America/New_York
@@ -274,7 +276,7 @@ jobs:
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Rebuild Armbian [ ${{ inputs.set_release }} ]
-        uses: ophub/amlogic-s9xxx-armbian@main
+        uses: momokind/amlogic-s9xxx-armbian@z96a
         if: ${{ steps.down.outputs.status }} == 'success' && !cancelled()
         with:
           build_target: armbian
