--- a/.github/workflows/rebuild-armbian.yml
+++ b/.github/workflows/rebuild-armbian.yml
@@ -147,6 +147,8 @@ on:
           - xiaobao
           - zcube1-max
           - zysj
+          - z96a-fusb302
+          - z96a-husb311
       armbian_kernel:
         description: "Select kernel version."
         required: false
@@ -173,6 +175,7 @@ on:
         type: choice
         options:
           - ophub/kernel
+          - momokind/ophub-kernel
       kernel_usage:
         description: "Set the tags of the stable kernel."
         required: false
@@ -294,14 +297,14 @@ jobs:
 
           mkdir -p /builder/build
           ln -sf /builder/build ${GITHUB_WORKSPACE}/build
-          ln -sf /builder/build /home/runner/work/_actions/ophub/amlogic-s9xxx-armbian/main/build
+          ln -sf /builder/build /home/runner/work/_actions/momokind/amlogic-s9xxx-armbian/sunniwell/build
 
           sudo timedatectl set-timezone "${TZ}"
           echo "build_tag=Armbian${set_release}_${{ inputs.armbian_storage }}_$(date +"%Y.%m")" >> ${GITHUB_OUTPUT}
           echo "status=success" >> ${GITHUB_OUTPUT}
 
       - name: Rebuild Armbian
-        uses: ophub/amlogic-s9xxx-armbian@main
+        uses: momokind/amlogic-s9xxx-armbian@sunniwell-z96a
         if: ${{ env.ARMBIAN_URL }} != '' && !cancelled()
         with:
           build_target: armbian
